deploy: 9c9f9cc18097940ed402cb381f0747c1f913939b

--- a/_downloads/1a52f3978f5128f0ca7927e38b19e65a/plot_qc_poss_vs_used.ipynb
+++ b/_downloads/1a52f3978f5128f0ca7927e38b19e65a/plot_qc_poss_vs_used.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Possibled vs. Used Observations\n\nThis example demonstrates how to read and observation sequence\nfile, and view the number of used versus possible observations\nby type.\n"
+        "\n# Possible vs. Used Observations\n\nThis example demonstrates how to read and observation sequence\nfile, and view the number of used versus possible observations\nby type.\n"
       ]
     },
     {
