deploy: b0b819d925e4a3c5c9c555723dd2da0b532c22fd

--- a/_downloads/8a4b477d0502c13953a5c460ed0f3294/plot_qc_hover.ipynb
+++ b/_downloads/8a4b477d0502c13953a5c460ed0f3294/plot_qc_hover.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\nimport plotly.express as px\nimport pydartdiags.obs_sequence.obs_sequence as obsq"
+        "import os\nimport plotly.express as px\nimport pydartdiags.obs_sequence.obs_sequence as obsq\n\n# sphinx_gallery_thumbnail_path = '_static/geo_thumb.png'"
       ]
     },
     {
