--- a/_downloads/8a4b477d0502c13953a5c460ed0f3294/plot_qc_hover.ipynb
+++ b/_downloads/8a4b477d0502c13953a5c460ed0f3294/plot_qc_hover.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Read the obs_seq file into an obs_seq object.\nIn this example, we use a small obs_seq file \"obs_seq.final.ascii.small\"\nthat comes with the pyDARTdiags package \nin the data directory, so we use ``os`` to get the path to the file\n\n"
+        "Read the obs_seq file into an obs_seq object.\nIn this example, we use a small obs_seq file \"obs_seq.final.ascii.medium\"\nthat comes with the pyDARTdiags package \nin the data directory, so we use ``os`` to get the path to the file\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "data_dir = os.path.join(os.getcwd(), \"..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.small\")\n\nobs_seq = obsq.obs_sequence(data_file)"
+        "data_dir = os.path.join(os.getcwd(), \"..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.medium\")\n\nobs_seq = obsq.obs_sequence(data_file)"
       ]
     },
     {
