deploy: 5719b475e1f9a8458d41b765d430f11ec248efa9

--- a/_downloads/efb6f354051cfaaf6d3c2507130e9b6d/plot_grand_stats.ipynb
+++ b/_downloads/efb6f354051cfaaf6d3c2507130e9b6d/plot_grand_stats.ipynb
@@ -83,7 +83,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we caluculate the statistics required for DART diagnostics\n\n"
+        "Now we calculate the statistics required for DART diagnostics\n\n"
       ]
     },
     {
@@ -137,7 +137,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Summerize the grand statistics, which are the statistics aggregated over all the observations\nfor each type of observation.\n\n"
+        "Summarize the grand statistics, which are the statistics aggregated over all the observations\nfor each type of observation.\n\n"
       ]
     },
     {
