deploy: 52163a2875d5bae64ecd9584afb8fe0925a6f55e

--- a/_downloads/4b1e29eb5a16321306a4851e86279a4e/plot_external_fo.ipynb
+++ b/_downloads/4b1e29eb5a16321306a4851e86279a4e/plot_external_fo.ipynb
@@ -4,14 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Remove Observations\n\nThis example demonstrates how to remove observations from an\nobservation sequence and write a new observation sequence file.\n"
+        "\n# Adding External Forward Operators to an Observation\n\nExternal, or \"precomputed\" forward operators are forward operators\nthat are not calculated during filter, DART's assimilation program. \nThey are calculated externally, written to an observation sequence file,\nand read it by DART.  \n\nThis example shows how to add an external forward operator to an observation.\nWe'll be using observations for the Lorenz 96 tracer model, which is a toy\nmodel used to test assimilation algorithms.  We are going to create some \nRAW_TRACER_CONCENTRATION forward operators.\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Import the obs_sequence module\n\n"
+        "Import the obs_sequence module, and numpy\n\n"
       ]
     },
     {
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import pydartdiags.obs_sequence.obs_sequence as obsq"
+        "import os\nimport pydartdiags.obs_sequence.obs_sequence as obsq\nimport numpy as np"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Chose an obs_seq file to read.\nIn this example, we are using a small obs_seq file \"obs_seq.final.medium\"\nthat comes with the pyDARTdiags package \nin the data directory, so we ``import os`` to get the path to the file.\n\n"
+        "Read in the observation sequence file. In this example we'll use the\nobs_seq.out.tracer file that comes with the pyDARTdiags package.\nThis file only has two observations. \n\n"
       ]
     },
     {
@@ -40,14 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\ndata_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.medium\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Read the obs_seq file into an obs_seq object.\n\n"
+        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.out.tracer\")\nobs_seq = obsq.obs_sequence(data_file)"
       ]
     },
     {
@@ -58,14 +51,14 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)"
+        "obs_seq.df"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Take a look at the observation sequence.\n\n"
+        "The external forward operator is stored in the 'external_FO' column.\nCurrently, the 'external_FO' column is empty.\n\n"
       ]
     },
     {
@@ -76,14 +69,14 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq.df.head()"
+        "obs_seq.df.iloc[0]['external_FO']"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To count of the number of observations by type, use the groupby method.\n\n"
+        "Let's add a forward operator to the RAW_TRACER_CONCENTRATION observation.\nFor this example, we're going to use random numbers to create our ensemble\nof forward operators. For a scientific experiment, you would use appropriate \nforward operator results from your model. \nWe want 80 ensemble members, so we'll create 80 random numbers, and we want tracer\nconcentrations, so we'll force the numbers to be positive.\n\n"
       ]
     },
     {
@@ -94,14 +87,14 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq.df.groupby('type').size()"
+        "n = 80\nrandom_numbers = np.abs(np.random.normal(loc=0.75, scale=0.1, size=n)).tolist()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Let's remove the 'GPSRO_REFRACTIVITY' observations.\nRemove rows where ``'type' == 'GPSRO_REFRACTIVITY'``\n\n"
+        "DART observation sequence files have a specific format. DART expects the list\nof forward operators to have 'external_FO' followed by the number of ensemble\nmembers, followed by the 'key' for the forward operator. The 'key' is not \nused by DART, so we will just put 1 for the value. \n\n"
       ]
     },
     {
@@ -112,14 +105,14 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq.df = obs_seq.df[obs_seq.df['type'] != 'GPSRO_REFRACTIVITY']"
+        "random_numbers.insert(0, f'external_FO {n} 1')"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now let's check the number of observations by type again.\nFor only the 'GPSRO_REFRACTIVITY' observations:\n\n"
+        "Now we can add the forward operator to the 'external_FO' column for row 0\n\n"
       ]
     },
     {
@@ -130,14 +123,14 @@
       },
       "outputs": [],
       "source": [
-        "gpsro_count = (obs_seq.df['type'] == 'GPSRO_REFRACTIVITY').sum()\nprint(f\"Number of observations with type 'GPSRO_REFRACTIVITY': {gpsro_count}\")"
+        "obs_seq.df.at[0,'external_FO'].extend(random_numbers)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Count the observations by type again. You'll see that the 'GPSRO_REFRACTIVITY' \nobservations have been removed from the dataFrame\n\n"
+        "Now the 'external_FO' column has the forward operator.\n\n"
       ]
     },
     {
@@ -148,14 +141,14 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq.df.groupby('type').size()"
+        "obs_seq.df.iloc[0]['external_FO']"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Write the new observation sequence to a file.\n\n"
+        "Let's write the observation sequence file with the new forward operator.\n\n"
       ]
     },
     {
@@ -166,14 +159,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq.write_obs_seq('obs_seq.final.ascii.medium.no_gpsro')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "The new file will not have the 'GPSRO_REFRACTIVITY' observations.\n"
+        "obs_seq.write_obs_seq('obs_seq.out.tracer_with_external_FO')"
       ]
     }
   ],
