--- a/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
+++ b/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
@@ -65,24 +65,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Select observations with QC value of 0.\n\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": false
-      },
-      "outputs": [],
-      "source": [
-        "qc0 = obs_seq.select_by_dart_qc(0)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "Chose an observation type.\nThe observation types are stored in the 'type' column.\nTo see which observation types are in the dataframe, use the unique method:\n\n"
       ]
     },
@@ -94,7 +76,7 @@
       },
       "outputs": [],
       "source": [
-        "qc0['type'].unique()"
+        "obs_seq.df['type'].unique()"
       ]
     },
     {
