deploy: 639469e263b4f082acc53fdec03e6d5a2c6a19e7

--- a/_downloads/4b1e29eb5a16321306a4851e86279a4e/plot_external_fo.ipynb
+++ b/_downloads/4b1e29eb5a16321306a4851e86279a4e/plot_external_fo.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Adding External Forward Operators to an Observation\n\nExternal, or \"precomputed\" forward operators are forward operators\nthat are not calculated during filter, DART's assimilation program. \nThey are calculated externally, written to an observation sequence file,\nand read it by DART.  \n\nThis example shows how to add an external forward operator to an observation.\nWe'll be using observations for the Lorenz 96 tracer model, which is a toy\nmodel used to test assimilation algorithms.  We are going to create some \nRAW_TRACER_CONCENTRATION forward operators.\n"
+        "\n# Adding External Forward Operators to an Observation\n\nExternal, or \"precomputed\" forward operators are forward operators\nthat are not calculated during ``filter``, DART's assimilation program. \nThey are calculated externally, written to an observation sequence file,\nand read in by ``filter``.  \n\nThis example shows how to add an external forward operator to an observation.\nWe'll be using observations for the Lorenz 96 tracer model, which is a toy\nmodel used to test assimilation algorithms.  We are going to create some \nRAW_TRACER_CONCENTRATION forward operators.\n"
       ]
     },
     {
