--- a/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
+++ b/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Geographic Plot of Observations to look at QC\n\nThis example demonstrates how to read and observation sequence\nfile, and plot the observations on a map, with the color\nindicating the QC value.\n"
+        "\n# Geographic Plot of Observations to look at QC\n\nThis example demonstrates how to read an observation sequence\nfile and plot the observations on a map, with the color\nindicating the QC value.\n"
       ]
     },
     {
