--- a/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
+++ b/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Plot Profiles\n\nThis example demonstrates how to plot profiles of \nRMSE, bias, and totalspread.\n"
+        "\n# Plot Profiles\n\nThis example demonstrates how to plot profiles of \nRMSE, bias, and totalspread. For an explanation of the statistics calculations see\nthe `statistics` guide.\n"
       ]
     },
     {
