--- a/_downloads/ce101c761d274087ecac0cbfd4585183/plot_grand_stats.ipynb
+++ b/_downloads/ce101c761d274087ecac0cbfd4585183/plot_grand_stats.ipynb
@@ -4,14 +4,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Grand Statistics\n\nThis example demonstrates how to compute grand statistics for\nan observation sequence.\n"
+        "\n# Grand Statistics\n\nThis example demonstrates how to compute grand statistics for\nan observation sequence. For an explanation of the statistics calculations see\nthe `statistics` guide.\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Import the obs_sequence module \nand the statistics module\n\n"
+        "Import the obs_sequence module \nand the statistics module.\n\n"
       ]
     },
     {
@@ -47,7 +47,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Read the obs_seq file into an obs_seq object\n\n"
+        "Read the obs_seq file into an obs_seq object.\n\n"
       ]
     },
     {
@@ -58,14 +58,14 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)\n\n# Select observations with QC value of 0\nqc0 = obs_seq.select_by_dart_qc(0)"
+        "obs_seq = obsq.obs_sequence(data_file)\n\n# Select observations that were used in the assimilation.\nused_obs = obs_seq.select_used_qcs()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "qc0 is a dataframe with only the observations with QC value of 0.\n\nThe columns of the dataframe are the same as the original obs_seq dataframe\n\n"
+        "`used_obs` is a dataframe with only the observations with QC value of 0.\n\nThe columns of the dataframe are the same as the original obs_seq dataframe.\n\n"
       ]
     },
     {
@@ -76,14 +76,14 @@
       },
       "outputs": [],
       "source": [
-        "qc0.columns"
+        "used_obs.columns"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Now we calculate the statistics required for DART diagnostics\n\n"
+        "Now we calculate the statistics required for DART diagnostics.\n\n"
       ]
     },
     {
@@ -94,7 +94,7 @@
       },
       "outputs": [],
       "source": [
-        "stats.diag_stats(qc0)"
+        "stats.diag_stats(used_obs)"
       ]
     },
     {
@@ -112,14 +112,14 @@
       },
       "outputs": [],
       "source": [
-        "qc0.columns"
+        "used_obs.columns"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The help function can be used to find out more about the diag_stats function\nincluding what statistics are calculated\n\n"
+        "The help function can be used to find out more about the diag_stats function\nincluding what statistics are calculated.\n\n"
       ]
     },
     {
@@ -148,7 +148,7 @@
       },
       "outputs": [],
       "source": [
-        "stats.grand_statistics(qc0)"
+        "stats.grand_statistics(used_obs)"
       ]
     }
   ],
