deploy: d3001e0d85e0305ea534798a70dc608fb407da79

--- a/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
+++ b/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
@@ -65,7 +65,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Plot the observations on a map.\nIn this case, the colors of the points\nwill indicate the DART quality control value\nand the hover data will show the observation number,\nthe observation value, the type of observation, and the QC value\n\n"
+        "Plot the observations on a map.\nIn this case, the colors of the points\nwill indicate the DART quality control value\nand the hover data will show the observation number,\nthe observation value, the type of observation, and the QC value.\nYou can change the columns used for hover data and coloring. Refer\nto the columns in the dataframe to see your options.\n\n"
       ]
     },
     {
