deploy: b7030b38cbf6f0e6aae290dc3576407990fe11cc

--- a/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
+++ b/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
@@ -83,7 +83,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "For this example, we are going to look at the rank histogram for \nACARS_TEMPERATURE observations.\n\n"
+        "For this example, we are going to look at the profile for \nACARS_TEMPERATURE observations.\n\n"
       ]
     },
     {
