deploy: d7961b1279236d10b2a3cb36b3813efa4f8c3225

--- a/_downloads/35cc49d2ff3b046822bbe1eb8f180401/plot_remove_obs.ipynb
+++ b/_downloads/35cc49d2ff3b046822bbe1eb8f180401/plot_remove_obs.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)"
+        "obs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
