--- a/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
+++ b/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.medium\")\n\nobs_seq = obsq.obs_sequence(data_file)"
+        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.medium\")\n\nobs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
