--- a/_downloads/25e8be5ac3e7fb5340f4187d73e81dd4/plot_duplicates.ipynb
+++ b/_downloads/25e8be5ac3e7fb5340f4187d73e81dd4/plot_duplicates.ipynb
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"NCEP+ACARS.201303_6H.obs_seq2013030306\")\n\nobs_seq = obsq.obs_sequence(data_file)"
+        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"NCEP+ACARS.201303_6H.obs_seq2013030306\")\n\nobs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
