--- a/_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb
+++ b/_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)"
+        "obs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
