--- a/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
+++ b/_downloads/bc705c3dddb5668c2e2af27eeb8ae104/plot_profiles.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)"
+        "obs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
