--- a/_downloads/ce101c761d274087ecac0cbfd4585183/plot_grand_stats.ipynb
+++ b/_downloads/ce101c761d274087ecac0cbfd4585183/plot_grand_stats.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)\n\n# Select observations that were used in the assimilation.\nused_obs = obs_seq.select_used_qcs()"
+        "obs_seq = obsq.ObsSequence(data_file)\n\n# Select observations that were used in the assimilation.\nused_obs = obs_seq.select_used_qcs()"
       ]
     },
     {
