--- a/_downloads/d52c59b9fddbf5a8d763495b67900fe5/plot_evolution.ipynb
+++ b/_downloads/d52c59b9fddbf5a8d763495b67900fe5/plot_evolution.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)"
+        "obs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
