--- a/_downloads/fab812091467099906cf4212ae4d2052/plot_qc_poss_vs_used.ipynb
+++ b/_downloads/fab812091467099906cf4212ae4d2052/plot_qc_poss_vs_used.ipynb
@@ -58,7 +58,7 @@
       },
       "outputs": [],
       "source": [
-        "obs_seq = obsq.obs_sequence(data_file)"
+        "obs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
