deploy: c1056bf8edcd904c789b7c6eb672484426d90ac1

--- a/_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb
+++ b/_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb
@@ -130,7 +130,7 @@
       },
       "outputs": [],
       "source": [
-        "ens_size = 80\nfig = mp.plot_rank_histogram(obs_seq, levels, obs_type, ens_size)"
+        "ens_size = 80\nfig = mp.plot_rank_histogram(obs_seq, obs_type, ens_size, levels)"
       ]
     }
   ],
