deploy: 4b69d48ca3ee979b28faf6225d9033a9a3f91fb1

--- a/_downloads/25e8be5ac3e7fb5340f4187d73e81dd4/plot_duplicates.ipynb
+++ b/_downloads/25e8be5ac3e7fb5340f4187d73e81dd4/plot_duplicates.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import os\nimport pydartdiags.obs_sequence.obs_sequence as obsq"
+        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.data import get_example_data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Read in the observation sequence file. In this example we'll use a real obs_seq file,\nthe NCEP+ACARS.201303_6H.obs_seq2013030306 file that comes with the pyDARTdiags package.\nThis is 6 hours of observations from March 3, 2013.\n\n"
+        "Read in the observation sequence file. In this example we'll use a real obs_seq file,\nthe NCEP+ACARS.201303_6H.obs_seq2013030306 file.\nThis is 6 hours of observations from March 3, 2013.\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"NCEP+ACARS.201303_6H.obs_seq2013030306\")\n\nobs_seq = obsq.ObsSequence(data_file)"
+        "data_file = get_example_data(\"NCEP+ACARS.201303_6H.obs_seq2013030306\")\n\nobs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
