--- a/_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb
+++ b/_downloads/57f04f4b48ecf7be9b1367cccc55b5cf/plot_rank_histogram.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.matplots import matplots as mp"
+        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.matplots import matplots as mp\nfrom pydartdiags.data import get_example_data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Chose an obs_seq file to read.\nIn this example, we are using a small obs_seq file \"obs_seq.final.1000\"\nthat comes with the pyDARTdiags package \nin the data directory, so we ``import os`` to get the path to the file.\n\n"
+        "Chose an obs_seq file to read.\nIn this example, we are using a small obs_seq file \"obs_seq.final.1000\".\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\ndata_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.1000\")"
+        "data_file = get_example_data(\"obs_seq.final.1000\")"
       ]
     },
     {
