--- a/_downloads/4b1e29eb5a16321306a4851e86279a4e/plot_external_fo.ipynb
+++ b/_downloads/4b1e29eb5a16321306a4851e86279a4e/plot_external_fo.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import os\nimport pydartdiags.obs_sequence.obs_sequence as obsq\nimport numpy as np"
+        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.data import get_example_data\nimport numpy as np"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Read in the observation sequence file. In this example we'll use the\nobs_seq.out.tracer file that comes with the pyDARTdiags package.\nThis file only has two observations. \n\n"
+        "Read in the observation sequence file. In this example we'll use the\nobs_seq.out.tracer file.\nThis file only has two observations.\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.out.tracer\")\nobs_seq = obsq.ObsSequence(data_file)"
+        "data_file = get_example_data(\"obs_seq.out.tracer\")\nobs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
