--- a/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
+++ b/_downloads/9a0a242153655c3aa4734a45e2316287/plot_qc_hover.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import os\nimport plotly.express as px\nimport pydartdiags.obs_sequence.obs_sequence as obsq"
+        "import plotly.express as px\nimport pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.data import get_example_data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Read the obs_seq file into an obs_seq object.\nIn this example, we use a small obs_seq file \"obs_seq.final.ascii.medium\"\nthat comes with the pyDARTdiags package \nin the data directory, so we use ``os`` to get the path to the file\n\n"
+        "Read the obs_seq file into an obs_seq object.\nIn this example, we use a small obs_seq file \"obs_seq.final.ascii.medium\".\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "data_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.medium\")\n\nobs_seq = obsq.ObsSequence(data_file)"
+        "data_file = get_example_data(\"obs_seq.final.ascii.medium\")\n\nobs_seq = obsq.ObsSequence(data_file)"
       ]
     },
     {
