--- a/_downloads/d52c59b9fddbf5a8d763495b67900fe5/plot_evolution.ipynb
+++ b/_downloads/d52c59b9fddbf5a8d763495b67900fe5/plot_evolution.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.matplots import matplots as mp"
+        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.matplots import matplots as mp\nfrom pydartdiags.data import get_example_data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Chose an obs_seq file to read.\nIn this example, we are using \"obs_seq.final.lorenz_96\" which is from\na Lorenz 96 model run with the DART assimilation system.\nThe obs_seq.final.lorenz_96 file comes with the pyDARTdiags package\nin the data directory, so we ``import os`` to get the path to the file.\n\n"
+        "Chose an obs_seq file to read.\nIn this example, we are using \"obs_seq.final.lorenz_96\" which is from\na Lorenz 96 model run with the DART assimilation system.\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\ndata_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.lorenz_96\")"
+        "data_file = get_example_data(\"obs_seq.final.lorenz_96\")"
       ]
     },
     {
