--- a/_downloads/fab812091467099906cf4212ae4d2052/plot_qc_poss_vs_used.ipynb
+++ b/_downloads/fab812091467099906cf4212ae4d2052/plot_qc_poss_vs_used.ipynb
@@ -22,14 +22,14 @@
       },
       "outputs": [],
       "source": [
-        "import pydartdiags.obs_sequence.obs_sequence as obsq"
+        "import pydartdiags.obs_sequence.obs_sequence as obsq\nfrom pydartdiags.data import get_example_data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Chose an obs_seq file to read.\nThis is a small obs_seq file \"obs_seq.final.ascii.small\"\nthat comes with the pyDARTdiags package \nin the data directory, so we ``import os`` to get the path to the file\n\n"
+        "Chose an obs_seq file to read.\nThis is a small obs_seq file \"obs_seq.final.ascii.small\".\n\n"
       ]
     },
     {
@@ -40,7 +40,7 @@
       },
       "outputs": [],
       "source": [
-        "import os\ndata_dir = os.path.join(os.getcwd(), \"../..\", \"data\")\ndata_file = os.path.join(data_dir, \"obs_seq.final.ascii.small\")"
+        "data_file = get_example_data(\"obs_seq.final.ascii.small\")"
       ]
     },
     {
